# nse-value-screener

./: .gitignore  README.md  annual_reports_cleaned.csv  annual_reports_queue.csv  annual_reports_queue_20260108_102010.csv  annual_reports_queue_20260108_102010_cleaned.csv  annual_reports_ready_for_ai.csv  download_financial_reports.py  download_links.py  filter_annual_reports.py  financial_report extraction.py  financial_report_extraction.py  get_website_page_for_financial_report.py  main.py  nse.html  nse_listed_companies.csv  nse_listed_companies_20260108_160702.csv  nse_listed_companies_extraction.py  process_with_gemini.py  pyproject.toml  schemas.py  settings.py  test_example.py  test_get_documents.py  utils.py
